Fixed padding on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -356,7 +356,11 @@ body {
 
 .title {
   text-align: center;
-  padding-bottom: 1.5rem;
+  padding: 0 1rem 1.5rem 1rem;
+}
+
+.subtitle {
+  color: #fff;
 }
 
 .info {
@@ -377,6 +381,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 0;
   background: #fff;
   color: #363636;
   min-height: 100vh;
