--- a/scss/base/_containers.scss
+++ b/scss/base/_containers.scss
@@ -21,7 +21,11 @@ body {
 
 .title {
     text-align: center;
-    padding-bottom: 1.5rem;
+    padding: 0 1rem 1.5rem 1rem;
+}
+
+.subtitle {
+    color: $white;
 }
 
 .info {
@@ -33,6 +37,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 0;
     background: $white;
     color: $dark;
     min-height: 100vh;
